properly get dependencies in makefile

--- a/client/Makefile
+++ b/client/Makefile
@@ -5,9 +5,11 @@ TARGET ?= daclient
 
 CFLAGS=-g -Wall -lm
 
-$(TARGET): $(TARGET).o paths.h
+$(TARGET): $(TARGET).o
 	$(CC) $(TARGET).o -o $@ $(LDFLAGS)
 	chmod 6755 $(TARGET)
+
+daclient.o: daclient.c paths.h
 
 paths.h:
 	bash ./create_paths_h.sh
@@ -17,6 +19,7 @@ paths.h:
 clean:
 	$(RM)  *.o
 	$(RM) $(TARGET)
+	$(RM) paths.h
 
 run: $(TARGET)
 	@./$(TARGET)
